--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -16,10 +16,23 @@
           <a class="nav-link"  routerLinkActive="active" routerLink="/add-property">List property (Free)</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+        <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link"
+            routerLink ="user/regiser"
+            routerLinkActive="active"
+            >Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+            routerLink="user/login"
+            routerLinkActive="active"
+            >Login</a>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
+
+HSPA\Frontend\src\app\user\user-login\user-login
+HSPA\Frontend\src\app\property\add-property\add-property.component.ts
