--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav">
           <li class="nav-item">
             <a class="nav-link"
-            routerLink ="user/regiser"
+            routerLink ="user/register"
             routerLinkActive="active"
             >Register</a>
           </li>
@@ -34,5 +34,4 @@
   </div>
 </nav>
 
-HSPA\Frontend\src\app\user\user-login\user-login
-HSPA\Frontend\src\app\property\add-property\add-property.component.ts
+
