--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -6,7 +6,12 @@
         <form [formGroup]="registerationForm" (ngSubmit) ="onSubmit()">
           <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" formControlName ="userName" />
+            <input type="text" class="form-control"
+            formControlName ="userName" >
+            <span *ngIf="!registerationForm.get('userName')?.valid
+            && registerationForm.get('userName')?.touched cla" class="error-block">
+            Please provide name
+            </span>
           </div>
 
           <div class="form-group col-12">
