--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -8,8 +8,8 @@
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control"
             formControlName ="userName" >
-            <span *ngIf="!registerationForm.get('userName')?.valid
-            && registerationForm.get('userName')?.touched cla" class="error-block">
+            <span *ngIf="!userName.valid
+            && userName.touched" class="error-block">
             Please provide name
             </span>
           </div>
@@ -17,16 +17,40 @@
           <div class="form-group col-12">
             <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" formControlName="email" />
+            <span *ngIf="!email.valid && email.touched" class="error-block">
+              <span *ngIf=" email.hasError('required')">
+                Please provide email id
+              </span>
+              <span *ngIf="email.hasError('email')">
+                Please provide valid email
+              </span>
+            </span>
           </div>
 
           <div class="form-group col-12">
             <label for="password" class="form-label">Password</label>
             <input type="text" class="form-control" formControlName="password" />
+            <span *ngIf="!password.valid && password.touched" class="error-block">
+              <span *ngIf="password.errors['required']">
+                Please provide password
+              </span>
+              <span *ngIf="password.errors?.minlength">
+                Password should not be less than 8 characters
+              </span>
+            </span>
           </div>
 
           <div class="form-group col-12">
             <label for="cPassword" class="form-label">Confirm Password</label>
             <input type="text" class="form-control" formControlName ="confirmPassword"/>
+            <span *ngIf="!confirmPassword.valid && confirmPassword.touched" class="error-block">
+              <span *ngIf="confirmPassword.hasError('required')">
+                Please confirm password
+              </span>
+            </span>
+            <span *ngIf="registerationForm.hasError('notmatched') && confirmPassword.valid" class="error-block">
+              Passwords not matched
+            </span>
           </div>
 
           <div class="form-group col-12">
