--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -9,7 +9,7 @@
             <input type="text" class="form-control"
             formControlName ="userName" >
             <span *ngIf="!userName.valid
-            && userName.touched" class="error-block">
+            && (userName.touched || userSubmited)" class="error-block">
             Please provide name
             </span>
           </div>
@@ -17,7 +17,7 @@
           <div class="form-group col-12">
             <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" formControlName="email" />
-            <span *ngIf="!email.valid && email.touched" class="error-block">
+            <span *ngIf="!email.valid && (email.touched || userSubmited)" class="error-block">
               <span *ngIf=" email.hasError('required')">
                 Please provide email id
               </span>
@@ -30,7 +30,7 @@
           <div class="form-group col-12">
             <label for="password" class="form-label">Password</label>
             <input type="text" class="form-control" formControlName="password" />
-            <span *ngIf="!password.valid && password.touched" class="error-block">
+            <span *ngIf="!password.valid && (password.touched || userSubmited)" class="error-block">
               <span *ngIf="password.errors['required']">
                 Please provide password
               </span>
@@ -43,7 +43,7 @@
           <div class="form-group col-12">
             <label for="cPassword" class="form-label">Confirm Password</label>
             <input type="text" class="form-control" formControlName ="confirmPassword"/>
-            <span *ngIf="!confirmPassword.valid && confirmPassword.touched" class="error-block">
+            <span *ngIf="!confirmPassword.valid && (confirmPassword.touched || userSubmited)" class="error-block">
               <span *ngIf="confirmPassword.hasError('required')">
                 Please confirm password
               </span>
@@ -55,7 +55,15 @@
 
           <div class="form-group col-12">
             <label for="mobile" class="form-label">Mobile</label>
-            <input type="text" class="form-control" formControlName ="mobile"/>
+            <input type="text" class="form-control" formControlName="mobile">
+            <span  *ngIf="!mobile.valid && (mobile.touched || userSubmited)" class="error-block">
+                <span *ngIf="mobile.hasError('required')">
+                  Please provide mobile
+                </span>
+                <span *ngIf="mobile.hasError('maxlength')" class="error-block">
+                  Invalid mobile number
+                </span>
+            </span>
           </div>
 
           <div class="form-group col-12">
