--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,213 +1,331 @@
-<div class="card">
-  <div class="card-header">List your Property</div>
-  <div class="card-body">
-    <form (ngSubmit) ='onSubmit()' #Form="ngForm" >
-
-      <div>
-        <tabset #formTabs>
-
-          <tab heading="Basic info">
-            <div class="form-group col-12">
-            <p>I want to</p>
-            <div class="btn-group" btnRadioGroup>
-              <label class="btn btn-outline-primary mr-2"
-              btnRadio=1 role="button" name="SellRent">Sell</label>
-              <label class="btn btn-outline-primary"
-              btnRadio=2 role="button" name="SellRent">Rent</label>
-            </div>
-            </div>
-
-            <div class="form-group col-12">
-              <p>BHK</p>
-              <div class="btn-group" btnRadioGroup>
-                <label
-                *ngFor ="let bhk of [1,2,3,4]"
-                class="btn btn-outline-primary mr-2"
-                [btnRadio]="bhk" role="button" name="SellRent">{{bhk}}</label>
-              </div>
-            </div>
-
-
-            <div class="form-group col-12">
-              <p>Property Type</p>
-              <div class="btn-group" btnRadioGroup>
-                <label
-                *ngFor ="let ptype of propertyTypes"
-                class="btn btn-outline-primary mr-2"
-                [btnRadio]="ptype" role="button" name="SellRent">{{ptype}}</label>
-              </div>
-            </div>
-
-            <div class="form-group col-12">
-              <p>Furnishing type</p>
-              <div class="btn-group" btnRadioGroup>
-                <label
-                *ngFor ="let ftype of furnishTypes"
-                class="btn btn-outline-primary mr-2"
-                [btnRadio]="ftype" role="button" name="SellRent">{{ftype}}</label>
-              </div>
-            </div>
-
-
-            <div class="form-group col-12">
-              <label for="name"> Building/Society/Project</label>
-              <input type="text" class="form-control" #propeName = "ngModel"
-               ngModel name ="Name" required minlength=5>
-              <span *ngIf="!propeName.valid && propeName.touched" class="error-block">
-               <span *ngIf ="propeName.errors?.required">Please Provide Name</span>
-               <span *ngIf ="propeName.errors?.minlength">Name must be over 5 characters</span>
-              </span>
-            </div>
-
-            <div class="form-group col-12">
-              <label for="type"> City</label>
-              <input type="text" class="form-control" >
-            </div>
-
-            <div class="form-group col-12">
-              <label for="price"> Price</label>
-              <input type="text" class="form-control" ngModel name ="Price" >
-            </div>
-            <div class="form-group col-12">
-              <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Next</button>
-            </div>
-
-
-          </tab>
-          <tab heading="Pricing and Area">
-            <div class="form-group col-12">
-
-              <div class="form-group col-12">
-                <label>Price (in USD)</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Security (in USD)</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Maintenance (in USD)</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Built Area (in Sqr Feet)</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Carpet Area(in Sqr Feet)</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(0)">Back</button>
-                <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Next</button>
-              </div>
-
-            </div>
-          </tab>
-          <tab heading="Address">
-            <div class="form-group col-12">
-
-              <div class="form-group col-12">
-                <label>Floor</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Total Floor</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Address</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-                <label>Landmark</label>
-                <input type="text" class="form-control">
-              </div>
-
-              <div class="form-group col-12">
-              <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Back</button>
-              <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Next</button>
-              </div>
-
-            </div>
-          </tab>
-          <tab heading="Other Details">
-            <div class="form-group col-12">
-              <p>Ready to Move</p>
-              <div class="btn-group" btnRadioGroup>
-                <label class="btn btn-outline-primary mr-2"
-                btnRadio=1 role="button" name="SellRent">Yes</label>
-                <label class="btn btn-outline-primary"
-                btnRadio=2 role="button" name="SellRent">No</label>
-              </div>
-              </div>
-
-            <div class="form-group col-3">
-              <label>Possession/Avaialble From</label>
-              <input type="date" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Age of Property</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <p>Gated Community</p>
-              <div class="btn-group" btnRadioGroup>
-                <label class="btn btn-outline-primary mr-2"
-                btnRadio=1 role="button" name="SellRent">Yes</label>
-                <label class="btn btn-outline-primary"
-                btnRadio=2 role="button" name="SellRent">No</label>
-              </div>
-              </div>
-
-              <div class="form-group col-12">
-                <p>Ready to Move</p>
-                <div class="btn-group" btnRadioGroup>
-                  <label
-                  *ngFor ="let dir of directions"
-                  class="btn btn-outline-primary mr-2"
-                  [btnRadio]="dir" role="button" name="SellRent">{{dir}}</label>
-                </div>
-                </div>
-
-            <div class="form-group col-12">
-              <label>Description</label>
-              <textarea type="text" class="form-control" rows="6"></textarea>
-            </div>
-
-            <div class="form-group col-12">
-              <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Back</button>
-              <button type ="button" class="btn btn-primary btn-block" (click)="selectTab(4)">Next</button>
-            </div>
-
-
-          </tab>
-          <tab heading="Photos">
-            <div class="form-group col-12">
-              <div class="photo-control">
-                  <button class="mt-5" type="button">Upload</button> <br>
-                  This is under construction
-              </div>
-            </div>
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary btn-block"
-              (click)="selectTab(3)">Back</button>
-            </div>
-          </tab>
-
-        </tabset>
+<div class="row mb-5">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header">
+        <h3>List your Property</h3>
       </div>
+      <div class="card-body">
+        <form (ngSubmit)="onSubmit()" #Form="ngForm">
+          <div>
+            <tabset #formTabs>
+              <tab heading="Basic info">
+                <div class="form-group col-12">
+                  <p>I want to</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      class="btn btn-outline-primary mr-2"
+                      btnRadio="1"
+                      role="button"
+                      name="SellRent"
+                      >Sell</label
+                    >
+                    <label
+                      class="btn btn-outline-primary"
+                      btnRadio="2"
+                      role="button"
+                      name="SellRent"
+                      >Rent</label
+                    >
+                  </div>
+                </div>
 
-    </form>
+                <div class="form-group col-12">
+                  <p>BHK</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      *ngFor="let bhk of [1, 2, 3, 4]"
+                      class="btn btn-outline-primary mr-2"
+                      [btnRadio]="bhk"
+                      role="button"
+                      name="SellRent"
+                      >{{ bhk }}</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Property Type</p>
+                  <div class="btn-group" btnRadioGroup name='propType'
+                  [(ngModel)]="propertyView.Type">
+                    <label
+                      *ngFor="let ptype of propertyTypes"
+                      class="btn btn-outline-primary mr-2"
+                      [btnRadio]="ptype"
+                      role="button"
+                      name="SellRent"
+                      >{{ ptype }}</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Furnishing type</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      *ngFor="let ftype of furnishTypes"
+                      class="btn btn-outline-primary mr-2"
+                      [btnRadio]="ftype"
+                      role="button"
+                      name="SellRent"
+                      >{{ ftype }}</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label for="name"> Building/Society/Project</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    #propName="ngModel"
+                    ngModel name="Name"
+                    required
+                    minlength="5"
+                    [(ngModel)]="propertyView.Name"
+                  />
+                  <span
+                    *ngIf="!propName.valid && propName.touched"
+                    class="error-block"
+                  >
+                    <span *ngIf="propName.errors?.required"
+                      >Please Provide Name</span
+                    >
+                    <span *ngIf="propName.errors?.minlength"
+                      >Name must be over 5 characters</span
+                    >
+                  </span>
+                </div>
+
+                <div class="form-group col-12">
+                  <label for="type"> City</label>
+                  <input type="text" class="form-control" />
+                </div>
+
+
+                <div class="form-group col-12">
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="selectTab(1)"
+                  >
+                    Next
+                  </button>
+                </div>
+              </tab>
+              <tab heading="Pricing and Area">
+                <div class="form-group col-12">
+                  <div class="form-group col-12">
+                    <label>Price (in USD)</label>
+                    <input type="text" class="form-control" name ='price'
+                    [(ngModel)]="propertyView.Price" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Security (in USD)</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Maintenance (in USD)</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Built Area (in Sqr Feet)</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Carpet Area(in Sqr Feet)</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-block"
+                      (click)="selectTab(0)"
+                    >
+                      Back
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-block"
+                      (click)="selectTab(2)"
+                    >
+                      Next
+                    </button>
+                  </div>
+                </div>
+              </tab>
+              <tab heading="Address">
+                <div class="form-group col-12">
+                  <div class="form-group col-12">
+                    <label>Floor</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Total Floor</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Address</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Landmark</label>
+                    <input type="text" class="form-control" />
+                  </div>
+
+                  <div class="form-group col-12">
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-block"
+                      (click)="selectTab(1)"
+                    >
+                      Back
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-block"
+                      (click)="selectTab(3)"
+                    >
+                      Next
+                    </button>
+                  </div>
+                </div>
+              </tab>
+              <tab heading="Other Details">
+                <div class="form-group col-12">
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      class="btn btn-outline-primary mr-2"
+                      btnRadio="1"
+                      role="button"
+                      name="SellRent"
+                      >Yes</label
+                    >
+                    <label
+                      class="btn btn-outline-primary"
+                      btnRadio="2"
+                      role="button"
+                      name="SellRent"
+                      >No</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-3">
+                  <label>Possession/Avaialble From</label>
+
+                  <input
+                    type="text"
+                    placeholder="Datepicker"
+                    class="form-control"
+                    bsDatepicker
+                    [bsConfig]="{
+                      containerClass: 'theme-dark-blue',
+                      dateInputFormat: 'DD/MM/YYYY'
+                    }"
+                  />
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Age of Property</label>
+                  <input type="text" class="form-control" />
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Gated Community</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      class="btn btn-outline-primary mr-2"
+                      btnRadio="1"
+                      role="button"
+                      name="SellRent"
+                      >Yes</label
+                    >
+                    <label
+                      class="btn btn-outline-primary"
+                      btnRadio="2"
+                      role="button"
+                      name="SellRent"
+                      >No</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label
+                      *ngFor="let dir of directions"
+                      class="btn btn-outline-primary mr-2"
+                      [btnRadio]="dir"
+                      role="button"
+                      name="SellRent"
+                      >{{ dir }}</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Description</label>
+                  <textarea
+                    type="text"
+                    class="form-control"
+                    rows="6"
+                  ></textarea>
+                </div>
+
+                <div class="form-group col-12">
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="selectTab(2)"
+                  >
+                    Back
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="selectTab(4)"
+                  >
+                    Next
+                  </button>
+                </div>
+              </tab>
+              <tab heading="Photos">
+                <div class="form-group col-12">
+                  <div class="photo-control">
+                    <button class="mt-5" type="button">Upload</button> <br />
+                    This is under construction
+                  </div>
+                </div>
+                <div class="form-group col-12">
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="selectTab(3)"
+                  >
+                    Back
+                  </button>
+                </div>
+              </tab>
+            </tabset>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card-header">
+      <h3>Your Property Preview</h3>
+      <app-property-card [property]="propertyView"></app-property-card>
+    </div>
   </div>
 </div>
