--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -3,7 +3,7 @@
     <img *ngIf ="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg" />
     <img *ngIf ="!property.Image" class="card-img-top" src="assets/images/house_default.jpg" />
 
-    <ul class="list-inline text-center member-icons animate">
+    <ul *ngIf="!hideIcons" class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
         <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fas fa-edit"></i></button>
       </li>
@@ -14,9 +14,19 @@
       </li>
     </ul>
   </div>
-  <div class="card-body p-2">
-    <h1>{{ property.Type }}</h1>
-    <h1>{{ property.Name }}</h1>
-    <h1>{{ property.Price }}</h1>
+  <div class="card-body p-1">
+    <h1 class="mb-0"> {{property.BHK}} BHK {{property.Ptype}} </h1>
+
+    in {{property.Name}}
+    <span *ngIf="property.Name">,</span>
+    {{property.City}}
+
+    <h6  class="mt-2">{{property.Ftype}}
+    <span *ngIf="property.Ftype !== 'Unfurnished'">Furnished</span> | Ready to Move</h6>
+
+    <hr class="mt-0 mb-2">
+
+    <h6 class="mb-0">Price: <span class>{{property.Price}} USD.</span> |
+      Area:  <span>{{property.BuiltArea}} Sq Ft </span> </h6>
   </div>
 </div>
